--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <name>my_note</name>
 
     <properties>
+        <!--[WARNING] File encoding has not been set, using platform encoding GBK, i.e. build is platform dependent!-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <spring.version>3.2.0.RELEASE</spring.version>
         <es.version>1.1.1</es.version>
         <jackson.version>2.2.3</jackson.version>
@@ -51,13 +54,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -214,7 +210,12 @@
         <finalName>my_note</finalName>
         <plugins>
             <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.0</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -222,6 +223,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
                 <configuration>
                     <includes>
                         <include>**/*Tests.java</include>
