--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.springapp</groupId>
-    <artifactId>my_note</artifactId>
-    <packaging>war</packaging>
-    <version>1.0</version>
-    <name>my_note</name>
 
     <properties>
+        <groupId>com.xiaohulu</groupId>
+        <artifactId>my_note</artifactId>
+        <packaging>war</packaging>
+        <version>1.0</version>
+        <name>my_note</name>
         <!--[WARNING] File encoding has not been set, using platform encoding GBK, i.e. build is platform dependent!-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+        <jdk.version>1.8</jdk.version>
         <spring.version>3.2.0.RELEASE</spring.version>
         <es.version>1.1.1</es.version>
         <jackson.version>2.2.3</jackson.version>
@@ -18,6 +17,60 @@
         <quartz.verison>2.1.7</quartz.verison>
         <package.environment>etc_java</package.environment>
     </properties>
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>${groupId}</groupId>
+    <artifactId>${artifactId}</artifactId>
+    <packaging>${packaging}</packaging>
+    <version>${version}</version>
+    <name>${name}</name>
+
+
+    <!--项目站点生成-->
+    <!--<summary>
+        <name>${name}</name>
+        <groupId>${groupId}</groupId>
+        <artifactId>${artifactId}</artifactId>
+        <version>${version}</version>
+    </summary>-->
+
+    <!-- 版本控制 -->
+    <scm>
+        <connection>scm:git:git@github.com:xiaohulu/my_note.git</connection>
+        <developerConnection>scm:git:git@github.com:xiaohulu/my_note.git</developerConnection>
+        <url>https://github.com/xiaohulu/my_note/tree/master</url>
+    </scm>
+    <!-- 持续集成 -->
+    <ciManagement>
+        <system>GIT</system>
+        <url>https://github.com/xiaohulu/my_note/tree/master</url>
+    </ciManagement>
+    <!-- 项目团队 -->
+    <developers>
+        <developer>
+            <id>00000</id>
+            <name>xiaohulu</name>
+            <organization>fusionSky</organization>
+            <organizationUrl>http://www.fusionskye.com</organizationUrl>
+            <email>liweityut@163.com</email>
+            <roles>
+                <role>Software development</role>
+            </roles>
+        </developer>
+    </developers>
+    <!-- 项目授权 -->
+    <licenses>
+        <license>
+            <name>Apache License,Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+    <!-- 问题跟踪 -->
+    <issueManagement>
+        <system>GIT</system>
+        <url>https://github.com/xiaohulu/my_note/issues</url>
+    </issueManagement>
+
 
     <dependencies>
         <dependency>
@@ -209,16 +262,31 @@
 
     </dependencies>
 
-    <scm>
-        <connection>scm:svn:http://127.0.0.1/none</connection>
-        <developerConnection>
-            scm:svn:https://127.0.0.1/none
-        </developerConnection>
-        <tag>HEAD</tag>
-        <url>http://127.0.0.1/isaynone</url>
-    </scm>
 
     <build>
+
+        <!--项目的基础目录下跑下面的命令。
+        $ mvn help:effective-pom
+    一旦你运行了此命令,你应该能看到一个大得多的 POM,它暴露了 Maven 的默认设置-->
+
+        <!--<sourceDirectory>/lw/workfile/intellij_work/my_note/src/main/java</sourceDirectory>
+        <scriptSourceDirectory>/lw/workfile/intellij_work/my_note/src/main/scripts</scriptSourceDirectory>
+        <testSourceDirectory>/lw/workfile/intellij_work/my_note/src/test/java</testSourceDirectory>
+        <outputDirectory>/lw/workfile/intellij_work/my_note/target/classes</outputDirectory>
+        <testOutputDirectory>/lw/workfile/intellij_work/my_note/target/test-classes</testOutputDirectory>
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>/lw/workfile/intellij_work/my_note/src/main/resources</directory>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>/lw/workfile/intellij_work/my_note/src/test/resources</directory>
+            </testResource>
+        </testResources>
+        <directory>/lw/workfile/intellij_work/my_note/target</directory>-->
+
         <!--<finalName>my_note</finalName>-->
         <finalName>${project.artifactId}##${project.version}_${package.environment}</finalName>
 
@@ -234,17 +302,106 @@
                 </configuration>
             </plugin>
 
+            <!-- 构建项目站点报告插件-->
             <plugin>
+                <!-- 站点生成插件 -->
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.2</version>
+                <configuration>
+                    <!-- 支持国际化 -->
+                    <locales>zh_CN</locales>
+                    <reportPlugins>
+                        <plugin>
+                            <!-- 生成javadoc文件 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.9</version>
+                            <configuration>
+                                <source>${jdk.version}</source>
+                                <target>${jdk.version}</target>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <!-- 项目信息过滤 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.6</version>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <!-- index一定要生成,否则链接问题 -->
+                                        <report>index</report>
+                                        <report>dependencies</report>
+                                        <report>project-team</report>
+                                        <report>issue-tracking</report>
+                                        <report>license</report>
+                                        <report>scm</report>
+                                        <report>cim</report>
+                                        <report>modules</report>
+                                        <report>plugins</report>
+                                        <report>help</report>
+                                        <report>summary</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+                        <plugin>
+                            <!-- 源码查看生成 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>2.3</version>
+                            <configuration>
+                                <!-- 多模块聚合 -->
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <!-- 代码风格检查 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-checkstyle-plugin</artifactId>
+                            <version>2.10</version>
+                            <configuration>
+                                <!-- config/sun_checks.xml - Sun Microsystems Definition (default).
+                                 config/maven_checks.xml - Maven Development Definitions.
+                                 config/turbine_checks.xml - Turbine Development Definitions.
+                                 config/avalon_checks.xml - Avalon Development Definitions.-->
+                                <!-- 使用sun代码风格 -->
+
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <!-- 代码更改日志 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-changelog-plugin</artifactId>
+                            <version>2.2</version>
+                        </plugin>
+                        <plugin>
+                            <!-- 代码隐藏bug检查 -->
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-pmd-plugin</artifactId>
+                            <version>3.0</version>
+                            <configuration>
+                                <!-- 多模块聚合 -->
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <!-- 测试覆盖率 -->
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.5.2</version>
+                        </plugin>
+                    </reportPlugins>
+                </configuration>
             </plugin>
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                 </configuration>
             </plugin>
 
