--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>15.0</version>
+            <version>18.0-rc2</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
